--- a/features/media-capture.yml.dist
+++ b/features/media-capture.yml.dist
@@ -397,7 +397,6 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.MediaStreamTrack.applyConstraints.echoCancellation_constraint
-  - api.MediaStreamTrack.applyConstraints.latency_constraint
 
   # baseline: high
   # baseline_low_date: 2020-07-28
@@ -518,9 +517,9 @@ compat_features:
   #   chrome: "59"
   #   chrome_android: "59"
   #   edge: "79"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.MediaStreamTrack.applyConstraints.channelCount_constraint
+  #   firefox: "50"
+  #   firefox_android: "50"
+  - api.MediaStreamTrack.applyConstraints.latency_constraint
 
   # baseline: false
   # support:
@@ -550,6 +549,13 @@ compat_features:
   #   firefox_android: "55"
   - api.MediaStreamTrack.applyConstraints.autoGainControl_constraint
   - api.MediaStreamTrack.applyConstraints.noiseSuppression_constraint
+
+  # baseline: false
+  # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "79"
+  - api.MediaStreamTrack.applyConstraints.channelCount_constraint
 
   # baseline: false
   # support:
