--- a/features/non-cookie-storage-access.yml.dist
+++ b/features/non-cookie-storage-access.yml.dist
@@ -10,7 +10,13 @@ compat_features:
   # support:
   #   chrome: "125"
   #   chrome_android: "125"
+  #   edge: "125"
   - api.Document.hasUnpartitionedCookieAccess
+
+  # baseline: false
+  # support:
+  #   chrome: "125"
+  #   chrome_android: "125"
   - api.Document.requestStorageAccess.types_parameter
   - api.Document.requestStorageAccess.types_parameter.types_BroadcastChannel_parameter
   - api.Document.requestStorageAccess.types_parameter.types_all_parameter
