--- a/features/shadow-dom.yml.dist
+++ b/features/shadow-dom.yml.dist
@@ -164,4 +164,6 @@ compat_features:
   #   chrome: "125"
   #   chrome_android: "125"
   #   edge: "125"
+  #   firefox: "128"
+  #   firefox_android: "128"
   - api.Element.attachShadow.options_serializable_parameter
