Add MediaError to <video>
This is the type of HTMLMediaElement's error property, and an orignal
(or almost) part of the API. The message property was a later
improvement, but still very Baseline by now.

--- a/features/video.yml
+++ b/features/video.yml
@@ -66,6 +66,9 @@ compat_features:
   - api.HTMLVideoElement.videoHeight
   - api.HTMLVideoElement.videoWidth
   - api.HTMLVideoElement.width
+  - api.MediaError
+  - api.MediaError.code
+  - api.MediaError.message
   - html.elements.video
   - html.elements.video.autoplay
   - html.elements.video.controls
