Rename "Fetch request streams" to "Fetch upload streams"
Toward https://github.com/web-platform-dx/web-features/issues/2818

--- a/features/fetch-request-streams.yml
+++ b/features/fetch-request-streams.yml
@@ -1,5 +1,5 @@
-name: Fetch request streams
-description: A `fetch()` request streams data to the server when a request's `body` property is a `ReadableStream` object.
+name: Fetch upload streams
+description: A `fetch()` request uploads a stream of data to the server when a request's `body` property is a `ReadableStream` object.
 spec: https://fetch.spec.whatwg.org/#concept-body-stream
 compat_features:
   - api.Request.body
