Move service worker event to the messageerror feature
The event on ServiceWorkerContainer and ServiceWorkerGlobalScope should
be given the same treatment for consistency. messageerror shipped after
service workers in all features in all browsers, so this seems like the
right move, rather than letting the service worker feature have both.

The moved event isn't Baseline, so again for consistency exclude both
from the compute_from list. This changes some browser versions to be
earlier, but doesn't change the Baseline date, determined by Safari.

--- a/features/messageerror.yml
+++ b/features/messageerror.yml
@@ -8,11 +8,11 @@ status:
   compute_from:
     - api.DedicatedWorkerGlobalScope.messageerror_event
     - api.MessagePort.messageerror_event
-    - api.ServiceWorkerContainer.messageerror_event
     - api.Window.messageerror_event
 compat_features:
   - api.DedicatedWorkerGlobalScope.messageerror_event
   - api.MessagePort.messageerror_event
   - api.ServiceWorkerContainer.messageerror_event
+  - api.ServiceWorkerGlobalScope.messageerror_event
   - api.Window.messageerror_event
   - api.Worker.messageerror_event
