Reduce the number of text-wrap features to just 3
Only `text-wrap: balance` and `text-wrap: pretty` are significant new
features, let everything elese be covered by the generic `text-wrap`
feature.

This changes the Baseline date of `text-wrap` a little, but it's still
in 2024 and so it doesn't seem worth trying to pin it to the earlier
date by trimming the `compute_from` list in a way that wouldn't match
the feature decription.

Fixes https://github.com/web-platform-dx/web-features/issues/2543.

--- a/features/text-wrap-balance.yml.dist
+++ b/features/text-wrap-balance.yml.dist
@@ -13,4 +13,27 @@ status:
     safari: "17.5"
     safari_ios: "17.5"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2024-05-13
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  #   firefox: "121"
+  #   firefox_android: "121"
+  #   safari: "17.5"
+  #   safari_ios: "17.5"
   - css.properties.text-wrap.balance
+
+  # baseline: low
+  # baseline_low_date: 2024-10-17
+  # support:
+  #   chrome: "130"
+  #   chrome_android: "130"
+  #   edge: "130"
+  #   firefox: "124"
+  #   firefox_android: "124"
+  #   safari: "17.5"
+  #   safari_ios: "17.5"
+  - css.properties.text-wrap-style.balance
