--- a/features/text-wrap-pretty.yml.dist
+++ b/features/text-wrap-pretty.yml.dist
@@ -8,4 +8,17 @@ status:
     chrome_android: "117"
     edge: "117"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "117"
+  #   chrome_android: "117"
+  #   edge: "117"
   - css.properties.text-wrap.pretty
+
+  # baseline: false
+  # support:
+  #   chrome: "130"
+  #   chrome_android: "130"
+  #   edge: "130"
+  - css.properties.text-wrap-style.pretty
