--- a/features/text-wrap-pretty.yml
+++ b/features/text-wrap-pretty.yml
@@ -2,3 +2,8 @@ name: "text-wrap: pretty"
 description: "The `text-wrap: pretty` CSS declaration prioritizes better layout over speed when text is broken into multiple lines."
 spec: https://drafts.csswg.org/css-text-4/#valdef-text-wrap-style-pretty
 group: text-wrap
+status:
+  compute_from: css.properties.text-wrap.pretty
+compat_features:
+  - css.properties.text-wrap.pretty
+  - css.properties.text-wrap-style.pretty
