--- a/features/capture-handle.yml
+++ b/features/capture-handle.yml
@@ -1,5 +1,4 @@
-draft_date: 2024-09-09
-name: Capture Handle - Bootstrapping Collaboration when Screensharing
+name: Capture handle
 description: TODO
 spec: https://w3c.github.io/mediacapture-handle/identity/
 compat_features:
