Add TimeRanges to <video> feature
This is the type of video.buffered/played/seekable.

--- a/features/video.yml
+++ b/features/video.yml
@@ -69,6 +69,10 @@ compat_features:
   - api.MediaError
   - api.MediaError.code
   - api.MediaError.message
+  - api.TimeRanges
+  - api.TimeRanges.end
+  - api.TimeRanges.length
+  - api.TimeRanges.start
   - html.elements.video
   - html.elements.video.autoplay
   - html.elements.video.controls
