--- a/features/video.yml.dist
+++ b/features/video.yml.dist
@@ -249,6 +249,22 @@ compat_features:
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
   # support:
+  #   chrome: "6"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "4"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - api.TimeRanges
+  - api.TimeRanges.end
+  - api.TimeRanges.length
+  - api.TimeRanges.start
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
   #   chrome: "15"
   #   chrome_android: "18"
   #   edge: "12"
