--- a/features/text-tracks.yml
+++ b/features/text-tracks.yml
@@ -8,6 +8,7 @@ status:
   compute_from: html.elements.track
 compat_features:
   - api.HTMLMediaElement.addTextTrack
+  - api.HTMLMediaElement.textTracks
   - api.HTMLTrackElement
   - api.HTMLTrackElement.cuechange_event
   - api.HTMLTrackElement.default
