--- a/features/text-tracks.yml.dist
+++ b/features/text-tracks.yml.dist
@@ -27,6 +27,7 @@ compat_features:
   #   safari: "6"
   #   safari_ios: "6"
   - api.HTMLMediaElement.addTextTrack
+  - api.HTMLMediaElement.textTracks
   - api.HTMLTrackElement
   - api.HTMLTrackElement.default
   - api.HTMLTrackElement.kind
