--- a/features/document-caretpositionfrompoint.yml.dist
+++ b/features/document-caretpositionfrompoint.yml.dist
@@ -7,8 +7,8 @@ status:
     chrome: "128"
     chrome_android: "128"
     edge: "128"
-    firefox: "23"
-    firefox_android: "23"
+    firefox: "20"
+    firefox_android: "20"
 compat_features:
   # baseline: low
   # baseline_low_date: 2025-03-31
@@ -36,6 +36,7 @@ compat_features:
   #   safari_ios: "18.4"
   - api.CaretPosition.getClientRect
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "128"
@@ -44,3 +45,10 @@ compat_features:
   #   firefox: "20"
   #   firefox_android: "20"
   - api.Document.caretPositionFromPoint
+
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  - api.Document.caretPositionFromPoint.options_parameter
