--- a/features/relative-color.yml.dist
+++ b/features/relative-color.yml.dist
@@ -25,6 +25,17 @@ compat_features:
   #   safari_ios: "16.4"
   - css.types.calc.color_component
   - css.types.color.lab.relative_syntax
+
+  # baseline: low
+  # baseline_low_date: 2024-07-09
+  # support:
+  #   chrome: "122"
+  #   chrome_android: "122"
+  #   edge: "122"
+  #   firefox: "128"
+  #   firefox_android: "128"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
   - css.types.color.oklab.relative_syntax
 
   # baseline: low
@@ -39,7 +50,6 @@ compat_features:
   #   safari_ios: "18"
   - css.types.color.color.relative_syntax
   - css.types.color.lch.relative_syntax
-  - css.types.color.oklch.relative_syntax
 
   # baseline: low
   # baseline_low_date: 2024-09-16
@@ -51,6 +61,7 @@ compat_features:
   #   firefox_android: "128"
   #   safari: "18"
   #   safari_ios: "18"
+  - css.types.color.oklch.relative_syntax
   - css.types.color.rgb.relative_syntax
 
   # ⬇️ Same status as overall feature ⬇️
