Fix execCommand() browser support (still not Baseline)
execCommand() is supported everywhere, it's just discouraged.

--- a/features/execcommand.yml
+++ b/features/execcommand.yml
@@ -8,6 +8,8 @@ discouraged:
   alternatives:
     - async-clipboard
     - contenteditable
+status:
+  compute_from: api.Document.execCommand
 compat_features:
   - api.Document.execCommand
   - api.Document.execCommand.copy
