--- a/features/observable.yml
+++ b/features/observable.yml
@@ -1,5 +1,5 @@
 name: Observable
-description: The `Observable` API provides a composable, ergonomic way of handling an asynchronous stream of events.
+description: The `when()` method on a event target returns an `Observable` object, which provides a declarative API for subscribing to and operating on events. It's an alternative to `addEventListener()` callbacks.
 spec: https://wicg.github.io/observable/
 compat_features:
   - api.EventTarget.when
