Add Observable API (#2863)
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/observable.yml
+++ b/features/observable.yml
@@ -1,6 +1,5 @@
-draft_date: 2025-04-10
 name: Observable
-description: TODO
+description: The `when()` method on a event target returns an `Observable` object, which provides a declarative API for subscribing to and operating on events. It's an alternative to `addEventListener()` callbacks.
 spec: https://wicg.github.io/observable/
 compat_features:
   - api.EventTarget.when
