--- a/features/draft/spec/login-status.yml.dist
+++ b/features/draft/spec/login-status.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "120"
     chrome_android: "120"
     edge: "120"
+    firefox: "138"
+    firefox_android: "138"
 compat_features:
   - api.Navigator.login
   - api.NavigatorLogin
