--- a/features/draft/spec/speculation-rules.yml.dist
+++ b/features/draft/spec/speculation-rules.yml.dist
@@ -3,6 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "136"
+    chrome_android: "136"
+    edge: "136"
 compat_features:
   - html.elements.script.type.speculationrules.tag
