--- a/features/draft/spec/webaudio-1-1.yml.dist
+++ b/features/draft/spec/webaudio-1-1.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "138"
+    firefox_android: "138"
 compat_features:
   - api.AudioWorklet.port
   - api.AudioWorkletGlobalScope.port
