--- a/features/print-color-adjust.yml.dist
+++ b/features/print-color-adjust.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "136"
+    chrome_android: "136"
     firefox: "97"
     firefox_android: "97"
     safari: "15.4"
