--- a/features/webrtc.yml.dist
+++ b/features/webrtc.yml.dist
@@ -1028,6 +1028,18 @@ compat_features:
   #   safari_ios: "11"
   - api.RTCDataChannel.binaryType.blob_value
 
+  # baseline: low
+  # baseline_low_date: 2025-04-29
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "79"
+  #   firefox: "138"
+  #   firefox_android: "138"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - api.RTCCertificate.getFingerprints
+
   # baseline: false
   # support:
   #   chrome: "74"
@@ -1064,15 +1076,6 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.RTCPeerConnection.RTCPeerConnection.configuration_iceCandidatePoolSize_parameter
-
-  # baseline: false
-  # support:
-  #   chrome: "61"
-  #   chrome_android: "61"
-  #   edge: "79"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.RTCCertificate.getFingerprints
 
   # baseline: false
   # support:
