--- a/features/customizable-select.yml.dist
+++ b/features/customizable-select.yml.dist
@@ -8,8 +8,20 @@ status:
     chrome_android: "134"
     edge: "134"
 compat_features:
-  - css.properties.appearance.base-select
+  # baseline: false
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
+  #   edge: "133"
   - css.selectors.checkmark
-  - css.selectors.picker
   - css.selectors.picker-icon
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "134"
+  #   chrome_android: "134"
+  #   edge: "134"
+  - css.properties.appearance.base-select
+  - css.selectors.picker
   - html.elements.selectedcontent
