--- a/features/draft/spec/css-color-hdr-1.yml.dist
+++ b/features/draft/spec/css-color-hdr-1.yml.dist
@@ -3,7 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "136"
+    chrome_android: "136"
+    edge: "136"
 compat_features:
   - css.properties.dynamic-range-limit
   - css.properties.dynamic-range-limit.constrained
