--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -678,6 +678,18 @@ compat_features:
   #   safari_ios: "16"
   - api.HTMLBaseElement.href.forbid_special_characters
 
+  # baseline: low
+  # baseline_low_date: 2025-04-29
+  # support:
+  #   chrome: "127"
+  #   chrome_android: "127"
+  #   edge: "127"
+  #   firefox: "138"
+  #   firefox_android: "138"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - html.elements.script.type.importmap.integrity
+
   # baseline: false
   # support:
   #   chrome: "4"
@@ -764,6 +776,16 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "90"
+  #   chrome_android: "90"
+  #   edge: "90"
+  #   firefox: "138"
+  #   firefox_android: "138"
+  - api.Window.originAgentCluster
+  - http.headers.Origin-Agent-Cluster
+
+  # baseline: false
+  # support:
   #   chrome: "92"
   #   chrome_android: "92"
   #   edge: "92"
@@ -792,21 +814,21 @@ compat_features:
 
   # baseline: false
   # support:
-  #   chrome: "127"
-  #   chrome_android: "127"
-  #   edge: "127"
-  #   safari: "18"
-  #   safari_ios: "18"
-  - html.elements.script.type.importmap.integrity
-
-  # baseline: false
-  # support:
   #   chrome: "131"
   #   chrome_android: "131"
   #   edge: "131"
   #   safari: "18.4"
   #   safari_ios: "18.4"
   - http.headers.Cross-Origin-Opener-Policy.noopener-allow-popups
+
+  # baseline: false
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
+  #   edge: "133"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - html.elements.script.type.importmap.multiple_import_maps
 
   # baseline: false
   # support:
@@ -858,14 +880,6 @@ compat_features:
 
   # baseline: false
   # support:
-  #   chrome: "90"
-  #   chrome_android: "90"
-  #   edge: "90"
-  - api.Window.originAgentCluster
-  - http.headers.Origin-Agent-Cluster
-
-  # baseline: false
-  # support:
   #   chrome: "99"
   #   chrome_android: "99"
   #   edge: "99"
@@ -901,7 +915,6 @@ compat_features:
   #   chrome_android: "133"
   #   edge: "133"
   - api.CustomElementRegistry.define.connectedMoveCallback_lifecycle_callback
-  - html.elements.script.type.importmap.multiple_import_maps
 
   # baseline: false
   # support:
@@ -911,6 +924,14 @@ compat_features:
   - api.HTMLDialogElement.closedBy
   - api.OffscreenCanvasRenderingContext2D.getContextAttributes
   - html.elements.dialog.closedby
+
+  # baseline: false
+  # support:
+  #   chrome: "136"
+  #   chrome_android: "136"
+  #   edge: "136"
+  - api.CanvasRenderingContext2D.lang
+  - api.OffscreenCanvasRenderingContext2D.lang
 
   # baseline: false
   # support:
@@ -947,10 +968,8 @@ compat_features:
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
-  - api.CanvasRenderingContext2D.lang
   - api.HTMLButtonElement.command.request-close
   - api.Navigator.authentication
-  - api.OffscreenCanvasRenderingContext2D.lang
   - html.elements.hr.hr_in_select
   - html.elements.input.alpha
   - html.elements.input.colorspace
