--- a/features/draft/spec/mst-content-hint.yml.dist
+++ b/features/draft/spec/mst-content-hint.yml.dist
@@ -10,6 +10,19 @@ status:
     safari: "12.1"
     safari_ios: "12.2"
 compat_features:
+  # baseline: low
+  # baseline_low_date: 2025-04-29
+  # support:
+  #   chrome: "83"
+  #   chrome_android: "83"
+  #   edge: "83"
+  #   firefox: "138"
+  #   firefox_android: "138"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - api.RTCRtpSender.getParameters.return_object_property_degradationPreference
+  - api.RTCRtpSender.setParameters.parameters_degradationPreference_parameter
+
   # baseline: false
   # support:
   #   chrome: "70"
@@ -18,14 +31,3 @@ compat_features:
   #   safari: "12.1"
   #   safari_ios: "12.2"
   - api.MediaStreamTrack.contentHint
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: "83"
-  #   chrome_android: "83"
-  #   edge: "83"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.RTCRtpSender.getParameters.return_object_property_degradationPreference
-  - api.RTCRtpSender.setParameters.parameters_degradationPreference_parameter
