--- a/features/js-modules.yml.dist
+++ b/features/js-modules.yml.dist
@@ -121,11 +121,14 @@ compat_features:
   #   safari_ios: "15"
   - api.Worklet.ecmascript_modules
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2025-04-29
   # support:
   #   chrome: "123"
   #   chrome_android: "123"
   #   edge: "123"
+  #   firefox: "138"
+  #   firefox_android: "138"
   #   safari: "17.2"
   #   safari_ios: "17.2"
   - javascript.statements.import.import_attributes
