--- a/features/svg.yml.dist
+++ b/features/svg.yml.dist
@@ -1761,6 +1761,32 @@ compat_features:
   #   safari_ios: "18.4"
   - api.SVGImageElement.decode
 
+  # baseline: low
+  # baseline_low_date: 2025-05-01
+  # support:
+  #   chrome: "136"
+  #   chrome_android: "136"
+  #   edge: "136"
+  #   firefox: "61"
+  #   firefox_android: "61"
+  #   safari: "14"
+  #   safari_ios: "14"
+  - api.SVGAElement.rel
+  - api.SVGAElement.relList
+
+  # baseline: low
+  # baseline_low_date: 2025-05-01
+  # support:
+  #   chrome: "136"
+  #   chrome_android: "136"
+  #   edge: "136"
+  #   firefox: "69"
+  #   firefox_android: "79"
+  #   safari: "12"
+  #   safari_ios: "12"
+  - api.SVGGeometryElement.isPointInFill.point_parameter_DOMPoint
+  - api.SVGGeometryElement.isPointInStroke.point_parameter_DOMPoint
+
   # baseline: false
   # support:
   #   chrome: "1"
@@ -1846,18 +1872,7 @@ compat_features:
   #   firefox_android: "61"
   #   safari: "14"
   #   safari_ios: "14"
-  - api.SVGAElement.rel
-  - api.SVGAElement.relList
   - svg.elements.a.rel
-
-  # baseline: false
-  # support:
-  #   firefox: "69"
-  #   firefox_android: "79"
-  #   safari: "12"
-  #   safari_ios: "12"
-  - api.SVGGeometryElement.isPointInFill.point_parameter_DOMPoint
-  - api.SVGGeometryElement.isPointInStroke.point_parameter_DOMPoint
 
   # baseline: false
   # support:
