Refine `ruby-position` and `display-ruby` key selection
Fixes https://github.com/web-platform-dx/web-features/issues/2634

--- a/features/display-ruby.yml
+++ b/features/display-ruby.yml
@@ -10,3 +10,4 @@ compat_features:
   - css.properties.display.ruby-base-container
   - css.properties.display.ruby-text
   - css.properties.display.ruby-text-container
+  - css.properties.ruby-position.alternate
