Move ::cue pseudo into main WebVTT feature
There is no strong connection to the cue settings (which are mainly
about cue positining), this pseudo is for styling the "inside" of a cue.
It wasn't supported since the very beginning of WebVTT in all browsers,
but goes very far back and can be considered part of WebVTT.

--- a/features/webvtt.yml
+++ b/features/webvtt.yml
@@ -15,3 +15,5 @@ compat_features:
   - api.VTTCue.text
   - api.VTTCue.text.all_html_character_references
   - api.VTTCue.VTTCue
+  - css.selectors.cue
+  - css.selectors.cue.selector_argument
