--- a/features/webvtt.yml.dist
+++ b/features/webvtt.yml.dist
@@ -34,6 +34,19 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "79"
+  #   firefox: "55"
+  #   firefox_android: "55"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.selectors.cue
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: "33"
   #   chrome_android: "33"
   #   edge: "79"
@@ -54,3 +67,12 @@ compat_features:
   #   safari: "17.5"
   #   safari_ios: "17.5"
   - api.VTTCue.text.all_html_character_references
+
+  # baseline: false
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "79"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.selectors.cue.selector_argument
