--- a/features/draft/spec/svg-animations.yml.dist
+++ b/features/draft/spec/svg-animations.yml.dist
@@ -5,5 +5,13 @@ status:
   baseline: false
   support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   firefox: "136"
+  #   firefox_android: "136"
   - api.SVGDiscardElement
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
   - svg.elements.discard
