--- a/features/events.yml.dist
+++ b/features/events.yml.dist
@@ -135,6 +135,47 @@ compat_features:
   - api.Event.isTrusted
 
   # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "49"
+  #   chrome_android: "49"
+  #   edge: "16"
+  #   firefox: "49"
+  #   firefox_android: "49"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.EventTarget.addEventListener.options_parameter
+  - api.EventTarget.addEventListener.options_parameter.options_capture_parameter
+  - api.EventTarget.removeEventListener.options_parameter
+
+  # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "16"
+  #   firefox: "49"
+  #   firefox_android: "49"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter
+
+  # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "55"
+  #   chrome_android: "55"
+  #   edge: "16"
+  #   firefox: "50"
+  #   firefox_android: "50"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.EventTarget.addEventListener.options_parameter.options_once_parameter
+
+  # baseline: high
   # baseline_low_date: 2018-09-17
   # baseline_high_date: 2021-03-17
   # support:
@@ -146,59 +187,6 @@ compat_features:
   #   safari: "12"
   #   safari_ios: "12"
   - api.CustomEvent.worker_support
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "49"
-  #   chrome_android: "49"
-  #   edge: ≤18
-  #   firefox: "49"
-  #   firefox_android: "49"
-  #   safari: "10"
-  #   safari_ios: "10"
-  - api.EventTarget.addEventListener.options_parameter
-  - api.EventTarget.removeEventListener.options_parameter
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "51"
-  #   chrome_android: "51"
-  #   edge: ≤18
-  #   firefox: "49"
-  #   firefox_android: "49"
-  #   safari: "10"
-  #   safari_ios: "10"
-  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "52"
-  #   chrome_android: "52"
-  #   edge: ≤18
-  #   firefox: "49"
-  #   firefox_android: "49"
-  #   safari: "10"
-  #   safari_ios: "10"
-  - api.EventTarget.addEventListener.options_parameter.options_capture_parameter
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "55"
-  #   chrome_android: "55"
-  #   edge: ≤18
-  #   firefox: "50"
-  #   firefox_android: "50"
-  #   safari: "10"
-  #   safari_ios: "10"
-  - api.EventTarget.addEventListener.options_parameter.options_once_parameter
 
   # baseline: high
   # baseline_low_date: 2020-01-15
