--- a/features/partitioned-cookies.yml.dist
+++ b/features/partitioned-cookies.yml.dist
@@ -7,12 +7,24 @@ status:
     chrome: "114"
     chrome_android: "114"
     edge: "114"
-    safari: "18.4"
-    safari_ios: "18.4"
 compat_features:
-  - api.CookieStore.delete.partitioned_option
-  - api.CookieStore.get.partitioned_return_property
-  - api.CookieStore.set.partitioned_option
+  # baseline: false
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.ExtendableCookieChangeEvent.changed.partitioned_property
   - api.ExtendableCookieChangeEvent.deleted.partitioned_property
   - http.headers.Set-Cookie.Partitioned
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  - api.CookieStore.delete.partitioned_option
+  - api.CookieStore.get.partitioned_return_property
+  - api.CookieStore.set.partitioned_option
