--- a/features/pointer-events-api.yml.dist
+++ b/features/pointer-events-api.yml.dist
@@ -140,6 +140,19 @@ compat_features:
   - api.PointerEvent.altitudeAngle
   - api.PointerEvent.azimuthAngle
 
+  # baseline: low
+  # baseline_low_date: 2024-12-11
+  # support:
+  #   chrome: "92"
+  #   chrome_android: "92"
+  #   edge: "92"
+  #   firefox: "129"
+  #   firefox_android: "129"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.Element.auxclick_event.type_pointerevent
+  - api.Element.click_event.type_pointerevent
+
   # baseline: false
   # support:
   #   chrome: "58"
@@ -152,19 +165,20 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "92"
+  #   chrome_android: "92"
+  #   edge: "92"
+  #   firefox: "129"
+  #   firefox_android: "129"
+  #   safari: "18.2"
+  - api.Element.contextmenu_event.type_pointerevent
+
+  # baseline: false
+  # support:
   #   chrome: "77"
   #   chrome_android: "77"
   #   edge: "79"
   - api.Element.pointerrawupdate_event
-
-  # baseline: false
-  # support:
-  #   chrome: "92"
-  #   chrome_android: "92"
-  #   edge: "92"
-  - api.Element.auxclick_event.type_pointerevent
-  - api.Element.click_event.type_pointerevent
-  - api.Element.contextmenu_event.type_pointerevent
 
   # baseline: false
   # support:
