--- a/features/push.yml.dist
+++ b/features/push.yml.dist
@@ -174,6 +174,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   firefox: "137"
+  #   firefox_android: "137"
   #   safari: "16"
   #   safari_ios: "16.4"
   - api.PushSubscriptionChangeEvent
@@ -182,6 +184,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   firefox: "137"
+  #   firefox_android: "137"
   #   safari: "16.1"
   #   safari_ios: "16.4"
   - api.PushSubscriptionChangeEvent.PushSubscriptionChangeEvent
