--- a/features/web-animations.yml
+++ b/features/web-animations.yml
@@ -1,5 +1,5 @@
 name: Web animations
-description: The web animation API programmatically creates, inspects, and controls elements' animations, to change and synchronize elements' appearance over time.
+description: The web animation API programmatically creates, inspects, and controls element animations, to change and synchronize appearance over time.
 spec: https://drafts.csswg.org/web-animations-1/
 caniuse: web-animation
 group: animation
