--- a/features/text-autospace.yml.dist
+++ b/features/text-autospace.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - css.properties.text-autospace
   - css.properties.text-autospace.auto
