--- a/features/brotli.yml.dist
+++ b/features/brotli.yml.dist
@@ -14,4 +14,5 @@ status:
     safari: "11"
     safari_ios: "11"
 compat_features:
+  - http.headers.Accept-Encoding.br
   - http.headers.Content-Encoding.br
