--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -64,6 +64,7 @@ compat_features:
   #   safari_ios: "9"
   - css.properties.align-content
   - css.properties.align-content.flex_context
+  - css.properties.align-content.normal
   - css.properties.flex-flow
   - css.properties.flex-wrap
   - css.properties.flex-wrap.nowrap
