--- a/features/grid.yml.dist
+++ b/features/grid.yml.dist
@@ -39,6 +39,7 @@ compat_features:
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - css.properties.row-gap
+  - css.properties.row-gap.normal
 
   # baseline: high
   # baseline_low_date: 2017-10-17
@@ -86,6 +87,7 @@ compat_features:
   - css.properties.display.grid
   - css.properties.display.inline-grid
   - css.properties.gap
+  - css.properties.gap.normal
   - css.properties.grid
   - css.properties.grid-area
   - css.properties.grid-auto-flow
