--- a/features/multi-column.yml.dist
+++ b/features/multi-column.yml.dist
@@ -26,6 +26,7 @@ compat_features:
   #   safari: "3"
   #   safari_ios: "2"
   - css.properties.column-gap
+  - css.properties.column-gap.normal
 
   # baseline: high
   # baseline_low_date: 2016-11-15
