--- a/features/speculation-rules.yml.dist
+++ b/features/speculation-rules.yml.dist
@@ -4,8 +4,8 @@
 status:
   baseline: false
   support:
-    chrome: "127"
-    chrome_android: "127"
+    chrome: "136"
+    chrome_android: "136"
 compat_features:
   # baseline: false
   # support:
@@ -86,6 +86,14 @@ compat_features:
   #   chrome_android: "127"
   #   edge: "127"
   - html.elements.script.type.speculationrules.expects_no_vary_search
+
+  # baseline: false
+  # support:
+  #   chrome: "136"
+  #   chrome_android: "136"
+  #   edge: "136"
+  - html.elements.script.type.speculationrules.tag
+  - http.headers.Sec-Speculation-Tags
 
   # baseline: false
   # support:
