--- a/features/text-underline-position.yml.dist
+++ b/features/text-underline-position.yml.dist
@@ -39,6 +39,7 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "12.1"
   #   safari_ios: "12.2"
+  - css.properties.text-underline-position.auto
   - css.properties.text-underline-position.under
 
   # baseline: high
