--- a/features/view-transitions.yml.dist
+++ b/features/view-transitions.yml.dist
@@ -32,6 +32,7 @@ compat_features:
   #   safari: "18"
   #   safari_ios: "18"
   - api.Document.startViewTransition
+  - api.Document.startViewTransition.updateCallback_parameter
   - api.ViewTransition
   - api.ViewTransition.finished
   - api.ViewTransition.ready
@@ -60,6 +61,15 @@ compat_features:
   - api.PageSwapEvent
   - api.PageSwapEvent.activation
   - api.Window.pageswap_event
+
+  # baseline: false
+  # support:
+  #   chrome: "125"
+  #   chrome_android: "125"
+  #   edge: "125"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.Document.startViewTransition.callbackOptions_parameter
 
   # baseline: false
   # support:
