--- a/features/webrtc-stats.yml.dist
+++ b/features/webrtc-stats.yml.dist
@@ -906,6 +906,7 @@ compat_features:
   #   firefox: "135"
   #   firefox_android: "135"
   - api.RTCStatsReport.type_outbound-rtp.mid
+  - api.RTCStatsReport.type_outbound-rtp.rid
 
   # baseline: false
   # support:
