--- a/features/zstd.yml.dist
+++ b/features/zstd.yml.dist
@@ -10,4 +10,5 @@ status:
     firefox: "126"
     firefox_android: "126"
 compat_features:
+  - http.headers.Accept-Encoding.zstd
   - http.headers.Content-Encoding.zstd
