--- a/features/audio-worklet.yml.dist
+++ b/features/audio-worklet.yml.dist
@@ -68,3 +68,9 @@ compat_features:
   - api.AudioWorkletNode.port
   - api.AudioWorkletNode.processorerror_event
   - api.BaseAudioContext.audioWorklet
+
+  # baseline: false
+  # support:
+  #   firefox: "138"
+  #   firefox_android: "138"
+  - api.AudioWorkletGlobalScope.port
