--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -594,3 +594,10 @@ compat_features:
   #   safari_ios: "11.3"
   - api.TextMetrics.emHeightAscent
   - api.TextMetrics.emHeightDescent
+
+  # baseline: false
+  # support:
+  #   chrome: "136"
+  #   chrome_android: "136"
+  #   edge: "136"
+  - api.CanvasRenderingContext2D.lang
