--- a/features/font-kerning.yml.dist
+++ b/features/font-kerning.yml.dist
@@ -15,3 +15,6 @@ status:
     safari_ios: "9"
 compat_features:
   - css.properties.font-kerning
+  - css.properties.font-kerning.auto
+  - css.properties.font-kerning.none
+  - css.properties.font-kerning.normal
