--- a/features/font-stretch.yml.dist
+++ b/features/font-stretch.yml.dist
@@ -12,6 +12,19 @@ status:
     safari: "11"
     safari_ios: "11"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "79"
+  #   firefox: "43"
+  #   firefox_android: "43"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - css.properties.font.font-width_keyword_values
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
