--- a/features/reading-flow.yml.dist
+++ b/features/reading-flow.yml.dist
@@ -6,3 +6,10 @@ status:
   support: {}
 compat_features:
   - css.properties.reading-flow
+  - css.properties.reading-flow.flex-flow
+  - css.properties.reading-flow.flex-visual
+  - css.properties.reading-flow.grid-columns
+  - css.properties.reading-flow.grid-order
+  - css.properties.reading-flow.grid-rows
+  - css.properties.reading-flow.normal
+  - css.properties.reading-flow.source-order
