--- a/features/text-combine-upright.yml.dist
+++ b/features/text-combine-upright.yml.dist
@@ -15,3 +15,5 @@ status:
     safari_ios: "15.4"
 compat_features:
   - css.properties.text-combine-upright
+  - css.properties.text-combine-upright.all
+  - css.properties.text-combine-upright.none
