--- a/features/weak-references.yml.dist
+++ b/features/weak-references.yml.dist
@@ -42,4 +42,5 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - javascript.builtins.FinalizationRegistry.register.symbol_as_target
+  - javascript.builtins.FinalizationRegistry.unregister.symbol_as_target
   - javascript.builtins.WeakRef.WeakRef.symbol_as_target
