--- a/features/input-color.yml.dist
+++ b/features/input-color.yml.dist
@@ -11,4 +11,25 @@ status:
     safari: "12.1"
     safari_ios: "12.2"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "20"
+  #   chrome_android: "25"
+  #   edge: "14"
+  #   firefox: "29"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
   - html.elements.input.type_color
+
+  # baseline: false
+  # support:
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - api.HTMLInputElement.alpha
+  - api.HTMLInputElement.colorSpace
+
+  # baseline: false
+  # support: {}
+  - html.elements.input.alpha
+  - html.elements.input.colorspace
