--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "format": "npx prettier --write .",
     "schema:write": "npm run schema -- --out ./schemas/data.schema.json",
     "schema": "ts-json-schema-generator --tsconfig ./tsconfig.json --path ./types.ts --type=WebFeaturesData",
+    "schematypes": "sh -c \"npx quicktype --lang='typescript' --src-lang schema --src ./schemas/new.schema.json --just-types='yes' --prefer-unions='yes' --prefer-const-values='yes' --top-level=WebFeaturesData | prettier --stdin-filepath ./new.quicktype.ts\"",
+    "schematypes:write": "npm run --silent schematypes > ./new.quicktype.ts",
     "test:caniuse": "tsx scripts/caniuse.ts",
     "test:coverage": "npm run --workspaces test:coverage",
     "test:dist": "tsx scripts/dist.ts --check",
@@ -50,6 +52,7 @@
     "fdir": "^6.4.4",
     "hast-util-to-string": "^3.0.1",
     "prettier": "^3.5.3",
+    "quicktype": "^23.2.5",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
