--- a/features/supports.yml.dist
+++ b/features/supports.yml.dist
@@ -67,11 +67,14 @@ compat_features:
   #   safari_ios: "17.5"
   - api.CSSImportRule.supportsText
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-05-13
   # support:
   #   chrome: "122"
   #   chrome_android: "122"
   #   edge: "122"
   #   firefox: "115"
   #   firefox_android: "115"
+  #   safari: "17.5"
+  #   safari_ios: "17.5"
   - css.at-rules.import.supports
