Replace types with newly generated types

--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "undist": "tsx scripts/undist.ts",
     "feature-init": "tsx scripts/feature-init.ts",
     "format": "npx prettier --write .",
-    "schema:write": "npm run schema -- --out ./schemas/data.schema.json",
-    "schema": "ts-json-schema-generator --tsconfig ./tsconfig.json --path ./types.ts --type=WebFeaturesData",
-    "schematypes": "sh -c \"npx quicktype --lang='typescript' --src-lang schema --src ./schemas/new.schema.json --just-types='yes' --prefer-unions='yes' --prefer-const-values='yes' --top-level=WebFeaturesData | prettier --stdin-filepath ./new.quicktype.ts\"",
-    "schematypes:write": "npm run --silent schematypes > ./new.quicktype.ts",
+    "schematypes": "sh -c \"npx quicktype --lang='typescript' --src-lang schema --src ./schemas/data.schema.json --just-types='yes' --prefer-unions='yes' --prefer-const-values='yes' --top-level=WebFeaturesData | prettier --stdin-filepath ./types.quicktype.ts\"",
+    "schematypes:write": "npm run --silent schematypes > ./types.quicktype.ts",
     "test:caniuse": "tsx scripts/caniuse.ts",
     "test:coverage": "npm run --workspaces test:coverage",
     "test:dist": "tsx scripts/dist.ts --check",
     "test:format": "prettier --check .",
     "test:lint": "npx eslint .",
-    "test:schema": "tsx scripts/schema.ts",
+    "test:schematypes": "tsx scripts/schema.ts",
     "test:specs": "tsx scripts/specs.ts",
     "test:types": "npm run --workspaces test:types && tsc",
-    "test": "npm run test:caniuse -- --quiet && npm run test:schema && npm run test:specs && npm run test:types && npm run test:format && npm run test:dist && npm run test --workspaces && npm run test:lint",
+    "test": "npm run test:caniuse -- --quiet && npm run test:schematypes && npm run test:specs && npm run test:types && npm run test:format && npm run test:dist && npm run test --workspaces && npm run test:lint",
     "update-drafts": "tsx scripts/update-drafts.ts",
     "remove-tagged-compat-features": "tsx scripts/remove-tagged-compat-features.ts && npm run format"
   },
