Add new types to web-features package build

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ packages/web-features/index.d.ts
 packages/**/LICENSE.txt
 packages/web-features/data.json
 packages/web-features/data.schema.json
-packages/web-features/types.ts
+packages/web-features/types*
+packages/web-features/index.js
 data.extended.json
-index.js
 
 # Ignore files created & used by pages & 11ty
 /_site/**
